# Hourai

logger/hourai/: Cargo.toml  build.rs
logger/hourai-feeds/: Cargo.toml
logger/hourai-feeds/src/: models.rs
logger/hourai-feeds/src/reddit/: auth.rs  mod.rs
logger/hourai-logger/src/: announcements.rs  buttons.rs  main.rs  member_chunker.rs  message_filter.rs  message_logging.rs  roles.rs
logger/hourai-logger/src/commands/: admin.rs  standard.rs
logger/hourai-music/: Cargo.toml
logger/hourai-music/src/: buttons.rs  interaction_ui.rs  interactions.rs  main.rs  player.rs  track.rs
logger/hourai-verification/: Cargo.toml
logger/hourai-verification/src/: context.rs  main.rs  rejectors.rs
logger/hourai-web/: Cargo.toml
logger/hourai-web/src/: guild_config.rs
logger/hourai/src/: config.rs  init.rs  lib.rs  prelude.rs
logger/hourai/src/cache/: config.rs  updates.rs
logger/hourai/src/interactions/: commands.rs  components.rs
logger/hourai/src/models/: message.rs  mod.rs  user.rs
logger/storage/common/: Cargo.toml
logger/storage/common/src/: actions.rs  escalation.rs  lib.rs
logger/storage/redis/: Cargo.toml
logger/storage/redis/src/: lib.rs  modlog.rs  protobuf.rs
logger/storage/sql/: Cargo.toml
logger/storage/sql/src/: models.rs
