[package]
name = "hourai"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2021"

[build-dependencies]
walkdir = "2.3.1"
protobuf-codegen = "3"

[dependencies]
anyhow = "1.0.38"
async-trait = "0.1"
base64 = "0.21"
bitflags = { default-features = false, version = "2" }
chrono = "0.4"
dashmap = { default-features = false, version = "5.2" }
metrics-exporter-prometheus = "0.12"
protobuf = "3"
serde = "1.0"
lazy_static = "1.4"
thiserror = "1.0"
hyper = { version = "0.14", features = ["client"] }
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
twilight-model = "0.15"
twilight-util = { version = "0.15", features = ["snowflake", "builder"] }
regex = "1.5"
serde_json = "1.0.107"

[dependencies.twilight-gateway]
version = "0.15"
default-features = false
features = ['rustls-webpki-roots', 'twilight-http']

[dependencies.twilight-http]
version = "0.15"
default-features = true
features = ['rustls-webpki-roots']

[dev-dependencies]
static_assertions = "1.1.0"
