[package]
name = "hourai-redis"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2021"

[dependencies]
hourai = { path = "../../hourai" }
anyhow = "1.0"
byteorder = "1.4"
flate2 = "1.0"
num-derive = "0.4"
num-traits = "0.2"
protobuf = "3"
tracing = { default-features = false, features = ["std", "attributes"], version = "0.1" }
serde_json = "1.0"

[dependencies.redis]
version = "0.23"
features = ["aio", "tokio-comp", "connection-manager"]
